--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green_500">#4CAF50</color>
     <color name="teal_500">#009688</color>
-
+    <color name="gray">#898989</color>
+    <color name="light_green">#90ee90</color>
+    <color name="light_gray">#D3D3D3</color>
 </resources>
