--- a/app/src/main/res/layout/fragment_recover_account.xml
+++ b/app/src/main/res/layout/fragment_recover_account.xml
@@ -5,25 +5,33 @@
     android:layout_height="match_parent"
     android:background="@color/green_500"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".View.fragments.RecoverAccountFragment">
+    tools:context=".View.fragments.auth.RecoverAccountFragment">
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navigationIcon="@drawable/ic_back" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="90dp"
         android:src="@drawable/ic_logo"
-        android:layout_marginTop="65dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
 
     <TextView
         android:id="@+id/txt_app_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
-        android:textSize="17sp"
         android:layout_marginTop="10dp"
         android:textColor="@color/white"
         android:textAlignment="center"
+        android:fontFamily="@font/playfair_display"
+        android:textSize="22sp"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
 
         />
@@ -47,6 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:text="@string/recoverAccountTitle"
+            android:fontFamily="@font/oswald"
             android:textSize="25sp"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
@@ -59,6 +68,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:textColor="@color/black"
+            android:fontFamily="@font/open_sans"
             android:textAlignment="center"
             android:text="@string/aboutRecoverAccount"
             android:drawablePadding="5dp"
@@ -95,6 +105,7 @@
             android:backgroundTint="@color/teal_500"
             android:text="@string/sent"
             android:textSize="18sp"
+            android:fontFamily="@font/open_sans"
             app:layout_constraintTop_toBottomOf="@+id/editTextEmailRecover"
             tools:layout_editor_absoluteX="15dp" />
 
