--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -104,7 +104,7 @@
                 android:textColor="@color/black"
                 android:drawableStart="@drawable/ic_email"
                 android:background="@drawable/background_edit_text_login"
-                android:inputType="textPassword"
+                android:inputType="textEmailAddress"
 
                 />
         </com.google.android.material.textfield.TextInputLayout>
@@ -137,7 +137,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/button_login"
+            android:id="@+id/button_create"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
@@ -148,7 +148,7 @@
             android:textSize="18sp"
             android:fontFamily="@font/open_sans"
             app:layout_constraintTop_toBottomOf="@+id/containerEditTextPasswordRepeat"
-            tools:layout_editor_absoluteX="15dp" />
+            />
 
 
 
@@ -159,7 +159,7 @@
 
 
     <ProgressBar
-        android:id="@+id/pg_login"
+        android:id="@+id/pg_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="invisible"
