--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -16,77 +16,50 @@
 
        <TextView
            android:id="@+id/text_title_task"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
+           android:layout_width="0dp"
+           android:layout_height="0dp"
            android:layout_margin="10dp"
            android:fontFamily="@font/open_sans"
            android:text="Minha tarefa"
-            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
+           android:textStyle="bold"
+           app:layout_constraintBottom_toBottomOf="parent"
+           app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
-
 
 
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
-           android:orientation="horizontal"
-           android:layout_marginBottom="10dp"
-           android:layout_marginTop="15dp"
-           app:layout_constraintEnd_toEndOf="parent"
-           app:layout_constraintStart_toStartOf="parent"
+           android:layout_marginHorizontal="5dp"
+           android:layout_marginTop="10dp"
+           android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
-           app:layout_constraintTop_toBottomOf="@id/text_title_task">
-           <ImageView
-               android:id="@+id/ic_arrow_back_ios"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintTop_toTopOf="parent">
+
+           <androidx.appcompat.widget.AppCompatButton
+               android:id="@+id/edit"
+               style="@style/ButtonTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
-               android:layout_gravity="center"
-               android:src="@drawable/ic_arrow_back_ios"
-               android:layout_marginEnd="8dp"
+               android:backgroundTint="@android:color/holo_orange_light"
+               android:text="Editar"
+
                />
 
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/delete"
+               style="@style/ButtonTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
-               android:layout_marginHorizontal="6dp"
-               android:text="Excluir"
                android:backgroundTint="#FF4444"
-               style="@style/ButtonTheme"
-               />
+               android:text="Excluir" />
 
-           <androidx.appcompat.widget.AppCompatButton
-               android:id="@+id/edit"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text="Editar"
-               android:backgroundTint="@android:color/holo_orange_light"
-               style="@style/ButtonTheme"
 
-               />
-
-           <androidx.appcompat.widget.AppCompatButton
-               android:id="@+id/detail"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_marginHorizontal="6dp"
-               android:text="Detalhes"
-               android:backgroundTint="@android:color/holo_blue_light"
-               style="@style/ButtonTheme"
-               />
-
-           <ImageView
-               android:id="@+id/ic_arrow_forward_ios"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:src="@drawable/ic_arrow_forward_ios"
-               android:layout_marginStart="8dp"
-               android:layout_gravity="center"
-               />
 
 
        </LinearLayout>
