--- a/app/src/main/res/layout/fragment_form_task.xml
+++ b/app/src/main/res/layout/fragment_form_task.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".View.fragments.FormTaskFragment">
+    tools:context=".View.fragments.ui.FormTaskFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
@@ -28,7 +28,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/new_task_create"
                 android:layout_gravity="center"
-                android:fontFamily="@font/oswald"
+                android:fontFamily="@font/poppins"
                 android:textColor="@color/white"
                 android:textSize="19sp"
                 />
@@ -76,7 +76,7 @@
             android:layout_marginTop="15dp"
             android:text="@string/task_status"
             android:textColor="@color/black"
-            android:fontFamily="@font/open_sans"
+            android:fontFamily="@font/poppins"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/editTaskDescription" />
@@ -86,7 +86,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-
             app:layout_constraintTop_toBottomOf="@id/taskStatus"
 
             >
@@ -96,8 +95,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:fontFamily="@font/open_sans"
-
+                android:fontFamily="@font/poppins"
                 android:text="@string/todo" />
 
             <RadioButton
@@ -105,7 +103,7 @@
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/open_sans"
+                android:fontFamily="@font/poppins"
 
                 android:text="@string/doing"
 
@@ -113,6 +111,7 @@
 
             <RadioButton
                 android:id="@+id/done"
+                android:fontFamily="@font/poppins"
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -124,25 +123,88 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:fontFamily="@font/open_sans"
+            android:fontFamily="@font/poppins"
             android:text="@string/task_category"
             android:textColor="@color/black"
-
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/radioGroup" />
 
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvTaskCategory"
+        <RadioGroup
+            android:id="@+id/radioGroupCategory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
             android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/txtSelectCategory"
-            tools:itemCount="3"
-            tools:listitem="@layout/item_category" />
+            app:layout_constraintTop_toBottomOf="@+id/txtSelectCategory">
+            <RadioButton
+                android:id="@+id/personal"
+                android:layout_width="wrap_content"
+                android:layout_weight="1"
+                android:layout_height="30dp"
+                android:button="@null"
+                android:padding="5dp"
+                android:layout_marginEnd="5dp"
+                android:textColor="@color/white"
+                android:background="@drawable/background_radio_button"
+                android:textAlignment="center"
+                android:fontFamily="@font/poppins"
+                android:text="Pessoal" />
+
+            <RadioButton
+                android:id="@+id/work"
+
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:fontFamily="@font/poppins"
+                android:layout_height="30dp"
+                android:padding="5dp"
+                android:button="@null"
+                android:layout_marginHorizontal="5dp"
+                android:textColor="@color/white"
+                android:background="@drawable/background_radio_button"
+                android:textAlignment="center"
+                android:text="Trabalho"
+
+                />
+
+            <RadioButton
+                android:id="@+id/finance"
+
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:padding="5dp"
+                android:button="@null"
+                android:layout_height="30dp"
+                android:textColor="@color/white"
+                android:layout_marginHorizontal="5dp"
+                android:fontFamily="@font/poppins"
+
+                android:background="@drawable/background_radio_button"
+                android:textAlignment="center"
+                android:text="Finanças" />
+
+
+
+            <RadioButton
+                android:id="@+id/others"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:button="@null"
+                android:layout_height="30dp"
+                android:fontFamily="@font/poppins"
+
+                android:textColor="@color/white"
+                android:padding="5dp"
+                android:layout_marginHorizontal="5dp"
+                android:background="@drawable/background_radio_button"
+                android:textAlignment="center"
+                android:text="Outros" />
+        </RadioGroup>
+
+
 
 
         <com.google.android.material.button.MaterialButton
@@ -155,7 +217,7 @@
             android:fontFamily="@font/open_sans"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/rvTaskCategory" />
+            app:layout_constraintTop_toBottomOf="@id/radioGroupCategory" />
 
 
         <ProgressBar
