--- a/app/src/main/res/layout/fragment_doing.xml
+++ b/app/src/main/res/layout/fragment_doing.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="5dp"
-    tools:context=".View.fragments.DoingFragment">
+    tools:context=".View.fragments.ui.DoingFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvDoing"
