--- a/app/src/main/res/layout/fragment_done.xml
+++ b/app/src/main/res/layout/fragment_done.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="5dp"
-    tools:context=".View.fragments.DoneFragment">
+    tools:context=".View.fragments.ui.DoneFragment">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvDone"
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
         android:id="@+id/statusDone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/open_sans"
+        android:fontFamily="@font/poppins"
         android:text="Nenhuma tarefa feita"
         android:textColor="@color/black"
         android:visibility="invisible"
