--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -66,10 +66,9 @@
           <com.google.android.material.tabs.TabLayout
               android:id="@+id/tabLayout"
               android:visibility="invisible"
-
               android:layout_width="match_parent"
               android:layout_height="0dp"
-              android:padding="2dp"
+              android:padding="0.01dp"
               android:background="@drawable/back_tab"
               android:layout_marginHorizontal="20dp"
               app:tabTextColor="@color/black"
@@ -95,7 +94,7 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
         android:visibility="invisible"
-
+        android:layout_marginHorizontal="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -105,10 +104,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end"
         android:visibility="invisible"
-
         android:backgroundTint="@color/teal_500"
         android:src="@drawable/ic_add_task_home"
-        android:layout_margin="10dp"
+        android:layout_margin="15dp"
         android:contentDescription="Adicionar nova tarefa"
         app:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
