--- a/app/src/main/res/layout/fragment_todo.xml
+++ b/app/src/main/res/layout/fragment_todo.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="5dp"
-    tools:context=".View.fragments.TodoFragment">
+    tools:context=".View.fragments.ui.TodoFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvTodo"
