--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+   <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container_task"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="15dp"
+    android:padding="12.5dp"
     android:layout_margin="5dp"
     android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
-   <androidx.constraintlayout.widget.ConstraintLayout
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:layout_margin="5dp"
-       >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
        <TextView
            android:id="@+id/text_title_task"
@@ -22,12 +17,66 @@
            android:fontFamily="@font/open_sans"
            android:text="Minha tarefa"
            android:textColor="@color/black"
+           android:ellipsize="end"
            android:textSize="20sp"
            android:textStyle="bold"
-           app:layout_constraintBottom_toBottomOf="parent"
+           app:layout_constraintBottom_toTopOf="@+id/containerInfo"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
+
+
+       <LinearLayout
+           android:id="@+id/containerInfo"
+           android:layout_width="0dp"
+           android:layout_height="wrap_content"
+           android:gravity="start"
+           app:layout_constraintBottom_toBottomOf="parent"
+           app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
+           app:layout_constraintStart_toStartOf="parent">
+
+
+               <TextView
+                   android:id="@+id/txtCategory"
+                   android:layout_width="70dp"
+                   android:layout_height="wrap_content"
+                   android:textAlignment="center"
+                   android:textSize="13sp"
+                   android:textColor="@color/white"
+                   android:background="@drawable/background_container_text_category"
+                   android:fontFamily="@font/open_sans"
+                   android:layout_margin="3dp"
+                   android:padding="3dp"
+
+                   />
+
+
+
+           <ImageView
+               android:id="@+id/imageCalendar"
+               android:layout_width="20dp"
+               android:layout_height="20dp"
+               android:layout_marginStart="15dp"
+               android:layout_marginTop="4dp"
+               android:src="@drawable/ic_calendar"
+               app:layout_constraintBottom_toBottomOf="parent"
+               app:layout_constraintStart_toStartOf="parent" />
+
+           <TextView
+               android:id="@+id/txtDate"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:fontFamily="@font/open_sans"
+               android:textColor="@color/black"
+               android:textSize="13sp"
+               android:layout_marginStart="4dp"
+               android:layout_marginTop="4dp"
+               app:layout_constraintBottom_toBottomOf="parent"
+               app:layout_constraintStart_toEndOf="@id/imageCalendar"
+               tools:text="ashajshjas"
+
+               />
+       </LinearLayout>
 
 
        <LinearLayout
@@ -68,5 +117,3 @@
    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
-</androidx.cardview.widget.CardView>
