--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -41,12 +41,12 @@
     </fragment>
     <fragment
         android:id="@+id/todoFragment"
-        android:name="com.example.taskplanner.View.fragments.TodoFragment"
+        android:name="com.example.taskplanner.View.fragments.ui.TodoFragment"
         android:label="fragment_todo"
         tools:layout="@layout/fragment_todo" />
     <fragment
         android:id="@+id/doingFragment"
-        android:name="com.example.taskplanner.View.fragments.DoingFragment"
+        android:name="com.example.taskplanner.View.fragments.ui.DoingFragment"
         android:label="fragment_doing"
         tools:layout="@layout/fragment_doing" />
     <fragment
@@ -63,12 +63,12 @@
     </fragment>
     <fragment
         android:id="@+id/doneFragment"
-        android:name="com.example.taskplanner.View.fragments.DoneFragment"
+        android:name="com.example.taskplanner.View.fragments.ui.DoneFragment"
         android:label="fragment_done"
         tools:layout="@layout/fragment_done" />
     <fragment
         android:id="@+id/formTaskFragment"
-        android:name="com.example.taskplanner.View.fragments.FormTaskFragment"
+        android:name="com.example.taskplanner.View.fragments.ui.FormTaskFragment"
         android:label="fragment_form_task"
         tools:layout="@layout/fragment_form_task" >
         <action
